# UtVAA

./: .gitignore  LICENSE  MANIFEST.in  README.md  evaluate.py  pyproject.toml  requirements.txt  setup.py  train.py  train_custom.py
configs/: cifar100.yaml  custom_dataset.yaml
utvaa/: __init__.py
utvaa/engine/: __init__.py  trainer.py
utvaa/models/: __init__.py  ultralight_net.py
utvaa/utils/: __init__.py  helpers.py
